module12/istio/2.L7/istio-spec.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: simple
spec:
  gateways:
    - simple
  hosts:
    - simple.cncamp.io
  http:
    - match:
        - uri:
            exact: "/simple/hello"
      rewrite:
        uri: "/hello"
      route:
        - destination:
            host: simple.simple.svc.cluster.local
            port:
              number: 80
    - match:
        - uri:
            exact: "/nginx"
      rewrite:
        uri: "/"
      route:
        - destination:
            host: nginx.simple.svc.cluster.local
            port:
              number: 80
